--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav>
             <div class="logo">Ema's CV<b>.</b></div>
             <ul class="navItems">
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">skills</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="skills.html">skills</a></li>
             </ul>
             <div class="links">
                 <a href="#"><i class='fa fa-linkedin-square'></i></a>
