added link for social media

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <li><a href="skills.html">skills</a></li>
             </ul>
             <div class="links">
-                <a href="#"><i class='fa fa-linkedin-square'></i></a>
-                <a href="#"><i class='fa fa-instagram'></i></a>
-                <a href="#"><i class='fa fa-github'></i></a>
+                <a href="https://www.linkedin.com/in/ema-boldor-64b722207/"><i class='fa fa-linkedin-square'></i></a>
+                <a href="https://www.instagram.com/ema.boldor/"><i class='fa fa-instagram'></i></a>
+                <a href="https://github.com/EmaBoldor"><i class='fa fa-github'></i></a>
             </div>
         </nav>
 
